--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,3 +1,45 @@
+@font-face {
+  font-family: "departure-mono";
+  src: url("/cdn/asset/font/departuremono/DepartureMono-Regular.woff2")
+      format("woff2"),
+    url("/cdn/asset/font/departuremono/DepartureMono-Regular.woff")
+      format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "cochin";
+  src: url("/cdn/asset/font/cochin/CochinLTStd.woff2") format("woff2"),
+       url("/cdn/asset/font/cochin/CochinLTStd.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "cochin";
+  src: url("/cdn/asset/font/cochin/CochinLTStd-Bold.woff2") format("woff2"),
+       url("/cdn/asset/font/cochin/CochinLTStd-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "cochin";
+  src: url("/cdn/asset/font/cochin/CochinLTStd-Italic.woff2") format("woff2"),
+       url("/cdn/asset/font/cochin/CochinLTStd-Italic.woff") format("woff");
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "cochin";
+  src: url("/cdn/asset/font/cochin/CochinLTStd-BoldItalic.woff2") format("woff2"),
+       url("/cdn/asset/font/cochin/CochinLTStd-BoldItalic.woff") format("woff");
+  font-weight: bold;
+  font-style: italic;
+}
+
 :root {
   --color-gray-100: hsl(225, 40%, 98%);
   --color-gray-150: hsl(225, 40%, 97%);
@@ -72,6 +114,6 @@
   --glass-border: 0.25px solid rgba(255, 255, 255, 0.2);
 
   --font-size: 24px;
-  --font: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  --font: "cochin";
   --font-mono: "departure-mono";
 }
