--- a/src/css/navigate-back.css
+++ b/src/css/navigate-back.css
@@ -23,6 +23,7 @@ a#navigate-back-a {
   text-decoration: none;
   z-index: 5;
   user-select: none;
+  -webkit-user-select: none !important; /* Safari */
 
   img {
     height: 1.5rem;
