--- a/css/mobile.css
+++ b/css/mobile.css
@@ -32,6 +32,20 @@
     background-color: black;
   }
 
+  html, body {
+    background-color: black;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  body {
+    padding-top: env(safe-area-inset-top);
+    padding-bottom: env(safe-area-inset-bottom);
+    background-color: black;
+  }
+  
+
   header {
     width: 100%;
     text-decoration: none !important;
