--- a/css/mobile.css
+++ b/css/mobile.css
@@ -32,7 +32,8 @@
     background-color: black;
   }
 
-  html, body {
+  html,
+  body {
     background-color: black;
     height: 100%;
     margin: 0;
@@ -44,7 +45,6 @@
     padding-bottom: env(safe-area-inset-bottom);
     background-color: black;
   }
-  
 
   header {
     width: 100%;
@@ -193,6 +193,7 @@
     margin: 0;
     margin-top: 80px;
     position: relative;
+    font-size: 2.5rem;
   }
 
   h1:before {
