--- a/css/mobile.css
+++ b/css/mobile.css
@@ -92,6 +92,14 @@
 
   main {
     padding: 10px;
+    background: linear-gradient(
+      to bottom,
+      black,
+      var(--color-gray-900) 6%,
+      var(--color-gray-900),
+      var(--color-gray-900),
+      black
+    );
   }
 
   section a {
