--- a/css/mobile.css
+++ b/css/mobile.css
@@ -53,7 +53,7 @@
 
   #Title-bar {
     width: 100%;
-    height: 100%;
+    height: 80px;
     display: flex;
     background: linear-gradient(
       to right,
@@ -80,9 +80,9 @@
   #Title-bar span {
     color: var(--color-white);
     font-size: 28px;
-    position: sticky;
+    position: absolute;
     left: 80px;
-    top: 20px;
+    top: 15px;
     line-height: 1;
   }
 
