--- a/css/mobile.css
+++ b/css/mobile.css
@@ -204,7 +204,7 @@
     font-size: 2.2rem;
   }
 
-  h1:before {
+  h1#landing:before {
     content: "The mobile view is still broken. I reccomend reading from a desktop.";
     color: orangered;
     position: absolute;
@@ -234,5 +234,121 @@
     white-space: nowrap;
     word-break: normal;
     overflow-wrap: normal;
+  }
+
+  form#Contact-form fieldset {
+    display: flex;
+    flex-direction: column;
+    border: none;
+  }
+
+  form#Contact-form input,
+  form#Contact-form textarea {
+    box-shadow: inset 0 0 10px 2px hsla(0, 0%, 10%, 1),
+      0px 5px 10px 2px rgba(0, 0, 0, 0.5);
+    margin-top: 0.3rem;
+    margin-bottom: 0.8rem;
+    background-color: var(--color-gray-800);
+    border: var(--glass-border);
+    color: var(--color-white);
+    border-radius: 10px;
+    padding: 0.5rem;
+    font-family: inherit;
+    font-size: 1rem;
+    resize: none;
+  }
+
+  form#Contact-form button {
+    margin-top: 1rem;
+    text-decoration: none;
+    font-weight: bold;
+    user-select: none;
+    border: var(--glass-border);
+    height: 2.5rem;
+    width: 100%;
+    border-radius: 20px;
+    background: radial-gradient(
+      circle at center,
+      var(--color-purple),
+      var(--color-purple),
+      var(--color-purple-dark)
+    );
+    color: var(--color-gray-100);
+    font-size: 1.1rem;
+    font-family: inherit;
+    box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.5);
+
+    transition: transform 0.3s ease, box-shadow 0.2s ease, background 0.2s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  div#Drop-zone {
+    box-sizing: border-box;
+    width: 100%;
+    min-height: 200px;
+    box-shadow: inset 0 0 5px 5px hsla(0, 0%, 10%, 1);
+    box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.5);
+    margin-top: 0.3rem;
+    margin-bottom: 0.8rem;
+    background-color: var(--color-gray-800);
+    border: var(--glass-border);
+    color: var(--color-white);
+    border-radius: 10px;
+    padding: 1rem;
+    padding-bottom: 0;
+    font-family: inherit;
+    font-size: 1rem;
+    display: flex;
+    overflow: hidden;
+    cursor: pointer;
+    position: relative;
+    flex-wrap: wrap;
+  }
+
+  div#Drop-zone img {
+    position: absolute;
+    user-select: none;
+    filter: invert(0.25);
+    min-height: 180px;
+    height: 80%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  div#Drop-zone img#Open {
+    display: none;
+  }
+
+  input.drop-zone-input {
+    display: none;
+  }
+
+  div#Drop-zone:has(div.drop-zone-thumb) img {
+    display: none !important;
+  }
+
+  div#Drop-zone div.drop-zone-thumb {
+    margin-right: 30px;
+    margin-bottom: 50px;
+    width: 100px;
+    height: 120px;
+    background-size: cover;
+    position: relative;
+    border-radius: 5px;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 1;
+    background-image: url("/cdn/asset/ico/file.svg");
+  }
+  .drop-zone-thumb.selected {
+    outline: 1px dashed rgba(255, 255, 255, 0.5);
+  }
+
+  label {
+    font-size: 1.1rem;
   }
 }
