--- a/css/mobile.css
+++ b/css/mobile.css
@@ -7,7 +7,7 @@
   :focus-visible {
     outline: 3px solid orange;
     transition: outline 0.2s ease;
-    border-radius: inherit;
+    border-radius: inherit !important;
   }
 
   html {
@@ -199,9 +199,19 @@
 
   h1 {
     margin: 0;
+    position: relative;
+    font-size: 2.2rem;
+  }
+
+  h1#landing {
+    margin: 0;
     margin-top: 80px;
     position: relative;
     font-size: 2.2rem;
+  }
+
+  h1#Contact {
+    font-size: 2rem;
   }
 
   h1#landing:before {
@@ -256,6 +266,21 @@
     font-family: inherit;
     font-size: 1rem;
     resize: none;
+  }
+  textarea {
+    height: 200px;
+  }
+
+  form#Contact-form input,
+  form#Contact-form textarea {
+    outline: none;
+  }
+
+  form#Contact-form input:focus,
+  form#Contact-form textarea:focus {
+    background-color: var(--color-gray-750);
+    border-radius: 10px !important;
+    outline: none;
   }
 
   form#Contact-form button {
