--- a/css/mobile.css
+++ b/css/mobile.css
@@ -211,7 +211,7 @@
   }
 
   h1#Contact {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
 
   h1#landing:before {
@@ -250,6 +250,8 @@
     display: flex;
     flex-direction: column;
     border: none;
+    padding-bottom: 0;
+    margin-bottom: 0;
   }
 
   form#Contact-form input,
@@ -269,6 +271,8 @@
   }
   textarea {
     height: 200px;
+    margin-bottom: 0.4rem !important;
+
   }
 
   form#Contact-form input,
@@ -284,7 +288,8 @@
   }
 
   form#Contact-form button {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
     text-decoration: none;
     font-weight: bold;
     user-select: none;
@@ -317,7 +322,7 @@
     box-shadow: inset 0 0 5px 5px hsla(0, 0%, 10%, 1);
     box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.5);
     margin-top: 0.3rem;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0.4rem;
     background-color: var(--color-gray-800);
     border: var(--glass-border);
     color: var(--color-white);
@@ -367,13 +372,26 @@
     background-repeat: no-repeat;
     background-position: center;
     z-index: 1;
-    background-image: url("/cdn/asset/ico/file.svg");
+    background-image: url("/src/asset/ico/file.svg");
   }
   .drop-zone-thumb.selected {
     outline: 1px dashed rgba(255, 255, 255, 0.5);
   }
 
+  div#Drop-zone div.drop-zone-thumb::after {
+    content: attr(data-label);
+    position: absolute;
+    bottom: -30px;
+    left: 0;
+    font-family: departure-mono;
+    white-space: nowrap;
+    font-size: 13.75px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
+    max-width: 100%;
+  }
   label {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
 }
