--- a/css/mobile.css
+++ b/css/mobile.css
@@ -38,6 +38,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
+    min-height: 100%;
   }
 
   body {
@@ -49,6 +50,9 @@
   header {
     width: 100%;
     text-decoration: none !important;
+    position: fixed;
+    top: 0;
+    z-index: 5;
   }
 
   #Title-bar {
@@ -61,6 +65,8 @@
       var(--color-purple),
       rgba(0, 0, 0, 0.8)
     );
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
   }
 
   #Title-bar a {
@@ -91,6 +97,7 @@
   }
 
   main {
+    margin-top: 80px;
     padding: 10px;
     background: linear-gradient(
       to bottom,
@@ -220,6 +227,7 @@
     top: -70px;
     font-size: 20px;
     text-align: center;
+    z-index: 1;
   }
 
   p {
@@ -271,7 +279,6 @@
   textarea {
     height: 200px;
     margin-bottom: 0.4rem !important;
-
   }
 
   form#Contact-form input,
@@ -392,5 +399,70 @@
   }
   label {
     font-size: 1rem;
+  }
+
+  .menu-icon {
+    font-size: 2rem;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: var(--color-gray-400);
+    padding: 1px 16px;
+  }
+  #menu-toggle:checked ~ #Dropdown-menu {
+    display: block;
+    position: absolute;
+    z-index: 9000;
+    max-height: 88.5vh; /* or 100vh if you want full height */
+    overflow-y: auto;
+  }
+
+  #Dropdown-menu {
+    width: 100%;
+    overflow-y: auto;
+    background-color: rgba(0, 0, 0, 0.6);
+    overscroll-behavior: contain;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  #Dropdown-menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border: var(--glass-border);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+  }
+
+  #Dropdown-menu a {
+    display: block;
+    padding: 0.75rem 1rem;
+    text-decoration: none;
+    color: var(--color-white);
+  }
+
+  /* Categories */
+  #Dropdown-menu > ul > .dropdown-category > a {
+    font-weight: bold;
+    border-bottom: 1px solid #1c1c1c;
+  }
+
+  /* Submenus */
+  #Dropdown-menu .dropdown-category ul {
+    padding-left: 1rem;
+    border: var(--glass-border);
+    padding: 10px 0;
+  }
+
+  #Dropdown-menu .dropdown-category ul a {
+    font-size: 0.9rem;
+    padding: 0.5rem 2rem;
+  }
+
+  #Dropdown-menu img {
+    height: 23px;
+    margin-right: 10px;
+    transform: translateY(3px);
   }
 }
