--- a/css/mobile.css
+++ b/css/mobile.css
@@ -10,8 +10,6 @@
     border-radius: inherit !important;
   }
 
-
-
   html {
     font-size: var(--font-size);
     -webkit-font-smoothing: antialiased;
@@ -32,6 +30,17 @@
     margin: 0;
     min-height: 100vh;
     background-color: black;
+  }
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+  }
+
+  main {
+    flex: 1 0 auto; /* takes remaining space */
+    padding-bottom: 2px; /* keeps your bottom gap */
   }
 
   html,
@@ -103,10 +112,10 @@
     padding: 10px;
     background: linear-gradient(
       to bottom,
-      black,
+      transparent,
       var(--color-gray-850) 2.5%,
       var(--color-gray-850),
-      black
+      transparent
     );
   }
 
@@ -208,7 +217,8 @@
   h1 {
     margin: 0;
     position: relative;
-    font-size: 2.2rem;
+    white-space: nowrap;
+    font-size: clamp(1rem, 8vw, 4rem);
   }
 
   h1#landing {
@@ -230,6 +240,7 @@
     font-size: 20px;
     text-align: center;
     z-index: 1;
+    white-space: initial;
   }
 
   p {
@@ -465,5 +476,19 @@
     height: 23px;
     margin-right: 10px;
     transform: translateY(3px);
+  }
+
+  #poem-404 {
+    font-size: 18px;
+  }
+
+  #fish-404 {
+    z-index: 0;
+    position: fixed;
+    top: 500px;
+    left: 10px;
+    scale: 1;
+    transform: scaleX(-1);
+    opacity: 0.15;
   }
 }
