--- a/css/mobile.css
+++ b/css/mobile.css
@@ -218,7 +218,7 @@
     margin: 0;
     position: relative;
     white-space: nowrap;
-    font-size: clamp(1rem, 8vw, 4rem);
+    font-size: clamp(1.5rem, 8vw, 4rem);
   }
 
   h1#landing {
@@ -229,6 +229,12 @@
   }
 
   h1#Contact {
+    font-size: 1.8rem;
+  }
+
+  h1#Index-h1 {
+    margin-top: 20px;
+    text-align: center;
     font-size: 1.8rem;
   }
 
@@ -491,4 +497,40 @@
     transform: scaleX(-1);
     opacity: 0.15;
   }
+
+  section#Purple {
+    align-items: center;
+  }
+
+  p a.btn-inter-nav {
+    margin: 30px 0;
+    margin-top: 5px;
+    width: 100%;
+    color: var(--color-off-white);
+    text-decoration: none;
+    font-weight: bold;
+    user-select: none;
+    border: var(--glass-border);
+    height: 2.6rem;
+    border-radius: 15px;
+    background: radial-gradient(
+      circle at bottom,
+      hsla(var(--color-gray-900-a), 0.2),
+      transparent
+    );
+    backdrop-filter: blur(50px);
+    color: var(--color-gray-100);
+    font-size: 1.3rem;
+    font-family: inherit;
+    box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.6),
+      inset 0px -8px 25px -10px rgba(0, 0, 0, 0.6),
+      inset 0px 10px 25px -10px rgba(0, 0, 0, 0.6);
+    transition: transform 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.05em;
+  }
+
 }
