--- a/css/mobile.css
+++ b/css/mobile.css
@@ -68,7 +68,7 @@
 
   #Title-bar {
     width: 100%;
-    height: 80px;
+    height: 75px;
     display: flex;
     background: linear-gradient(
       to right,
@@ -83,11 +83,10 @@
   #Title-bar a {
     text-decoration: none !important;
     width: 100%;
-    height: 100%;
   }
 
   #Title-bar img {
-    border-radius: 10px;
+    border-radius: 7px;
     position: absolute;
     scale: 1.5;
     top: 20px;
@@ -99,7 +98,7 @@
     font-size: 28px;
     position: absolute;
     left: 80px;
-    top: 15px;
+    top: 13px;
     line-height: 1;
   }
 
@@ -218,24 +217,43 @@
     margin: 0;
     position: relative;
     white-space: nowrap;
-    font-size: clamp(1.5rem, 8vw, 4rem);
+    font-size: 2.2rem;
   }
 
   h1#landing {
     margin: 0;
     margin-top: 80px;
     position: relative;
-    font-size: 2.2rem;
-  }
-
-  h1#Contact {
-    font-size: 1.8rem;
   }
 
   h1#Index-h1 {
-    margin-top: 20px;
     text-align: center;
+    font-size: clamp(1.3rem, 7vw, 6rem);
+  }
+
+  h1#Secret-h1 {
+    white-space: initial;
+    font-size: 2rem;
+  }
+
+  h1#Gallery-h1{
+    white-space: initial;
+    font-size: clamp(1.3rem, 7vw, 6rem);
+  }
+
+  h1#Contact,
+  h1#Index-h1,
+  h1#Smaller-h1 {
+    margin-top: 10px;
     font-size: 1.8rem;
+  }
+
+  h2 {
+    margin: 0;
+    padding-top: 0px !important;
+  }
+  h2 ~ ul {
+    margin-top: 0;
   }
 
   h1#landing:before {
@@ -272,6 +290,7 @@
     overflow-wrap: normal;
   }
 
+  form#Secret-form fieldset,
   form#Contact-form fieldset {
     display: flex;
     flex-direction: column;
@@ -280,6 +299,7 @@
     margin-bottom: 0;
   }
 
+  form#Secret-form input,
   form#Contact-form input,
   form#Contact-form textarea {
     box-shadow: inset 0 0 10px 2px hsla(0, 0%, 10%, 1),
@@ -300,11 +320,14 @@
     margin-bottom: 0.4rem !important;
   }
 
+  form#Secret-form input,
   form#Contact-form input,
   form#Contact-form textarea {
     outline: none;
   }
 
+  form#Secret-form textarea:focus,
+  form#Secret-form input:focus,
   form#Contact-form input:focus,
   form#Contact-form textarea:focus {
     background-color: var(--color-gray-750);
@@ -312,6 +335,7 @@
     outline: none;
   }
 
+  form#Secret-form button,
   form#Contact-form button {
     margin-top: 0.5rem;
     margin-bottom: 1rem;
@@ -533,4 +557,123 @@
     letter-spacing: 0.05em;
   }
 
+  /* ----------------------------*/
+
+  form#Search-bar {
+    margin: 20px;
+    margin-inline: auto;
+    padding: 0;
+    font-size: 0;
+    width: 95vw;
+  }
+  form#Search-bar label {
+    display: none;
+  }
+
+  form#Search-bar div {
+    display: flex;
+    width: 100%;
+    box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    margin-bottom: 2px;
+  }
+
+  form#Search-bar input {
+    width: 100%;
+    box-shadow: inset 0 0 5px 5px hsla(0, 0%, 10%, 1);
+    margin: 0;
+    background-color: var(--color-gray-800);
+    border: var(--glass-border);
+    color: var(--color-white);
+    border-radius: 10px 0 0 10px;
+    padding: 0.3rem 0.5rem;
+    padding-bottom: 2.5px;
+    font-family: inherit;
+    font-size: 0.75rem;
+    resize: none;
+    outline: none !important;
+  }
+
+  form#Search-bar input:focus {
+    border-radius: 10px 0 0 10px !important;
+  }
+
+  form#Search-bar button {
+    padding: 0 10px;
+    margin: 0;
+    border-radius: 0 10px 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: hsla(var(--color-green-light-a), 0.25);
+    border: var(--glass-border);
+    color: var(--color-white);
+    cursor: pointer;
+    user-select: none;
+  }
+
+  form#Search-bar img {
+    filter: invert(1);
+  }
+
+  #NoResults {
+    display: none;
+    color: orangered;
+    position: absolute;
+    top: 100px;
+    text-align: center;
+    width: 100%;
+    z-index: 100;
+  }
+
+  div#Deck {
+    margin: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    row-gap: 30px;
+    justify-content: center;
+  }
+  .card {
+    text-decoration: none;
+    border: var(--glass-border);
+    border-radius: 10px;
+    flex: 1 1 290px;
+    display: flex;
+    justify-content: center;
+    max-width: 290px;
+    height: 150px;
+    overflow: hidden;
+    transition: transform 0.3s ease-out;
+    will-change: transform;
+    background: linear-gradient(to bottom, hsl(0, 0%, 6%), hsl(0, 0%, 8%));
+    box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    align-items: center;
+    font-size: 1.2rem;
+    color: hsla(var(--color-green-light-a), 0.5) !important;
+    font-family: var(--font-mono);
+  }
+
+  .card:has(#SpotifyWidget) {
+    align-items: flex-start;
+    height: 400px;
+  }
+  img#SpotifyWidget,
+  img#SpotifyWidgetPlaceholder {
+    border-radius: 20px;
+    background-color: #121212;
+    max-width: 290px;
+    height: 102.5%;
+    position: absolute !important;
+  }
+
+  img#SpotifyWidgetPlaceholder {
+    height: 101% !important;
+    z-index: -1;
+  }
+
+  div#Secret-feedback {
+    display: none;
+  }
 }
