--- a/css/mobile.css
+++ b/css/mobile.css
@@ -220,6 +220,11 @@
     font-size: 2.2rem;
   }
 
+  h1#fof {
+    font-size: clamp(1.3rem, 7vw, 6rem);
+
+  }
+
   h1#landing {
     margin: 0;
     margin-top: 80px;
