--- a/css/twitter.css
+++ b/css/twitter.css
@@ -1,76 +1,236 @@
-section div#Timeline a {
-  color: var(--color-link);
-  text-decoration-thickness: 1.5px;
-  text-underline-offset: 1px;
-  font-weight: 600;
-
-  &:hover,
-  &:focus-visible {
-    color: var(--color-link-dark-hover);
-  }
-
-  &:active {
-    color: var(--color-link-dark-active);
-  }
-
-  &:visited {
-    color: var(--color-link-dark-visited);
+@media only screen and (min-width: 700px) {
+  section div#Timeline a {
+    color: var(--color-link);
+    text-decoration-thickness: 1.5px;
+    text-underline-offset: 1px;
+    font-weight: 600;
 
     &:hover,
     &:focus-visible {
-      color: var(--color-link-dark-visited-hover);
+      color: var(--color-link-dark-hover);
     }
 
     &:active {
-      color: var(--color-link-dark-visited-active);
+      color: var(--color-link-dark-active);
     }
+
+    &:visited {
+      color: var(--color-link-dark-visited);
+
+      &:hover,
+      &:focus-visible {
+        color: var(--color-link-dark-visited-hover);
+      }
+
+      &:active {
+        color: var(--color-link-dark-visited-active);
+      }
+    }
+  }
+
+  div#Timeline {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    padding: 30px 25px;
+    max-width: max-content;
+    margin: auto;
+
+    ::selection {
+      background-color: lightskyblue;
+      color: unset;
+    }
+
+    object {
+      user-select: none;
+      margin: 1px 3px 0 0;
+      transform: translateY(3px);
+    }
+
+    article.tweet-box {
+      margin: 20px auto;
+      padding: 8px 3px 25px 10px;
+      width: 100%;
+      display: flex;
+      align-items: flex-start;
+      gap: 5px;
+      background-color: rgba(161, 191, 232, 1);
+      border: var(--glass-border);
+      border-radius: 10px;
+    }
+
+    img.profile-pic {
+      border-radius: 100%;
+      user-select: none;
+    }
+
+    span.tweeter {
+      font-weight: 900;
+      color: black;
+    }
+
+    span.tweet-grey {
+      color: rgb(113, 118, 123);
+      display: inline-block;
+      transform: translateY(-2px);
+    }
+
+    p.tweet-text {
+      color: black;
+      font-size: 17px;
+      line-height: 20px;
+      margin: 0;
+      padding: 0;
+      max-width: 506px;
+      padding-right: 50px;
+      padding-bottom: 10px;
+    }
+
+    p img {
+      max-width: 100%;
+      border-radius: 20px;
+      margin: 20px 0 0 0;
+      max-height: 510px;
+      user-select: none;
+      box-shadow: 0px 5px 10px hsla(var(--color-gray-900-a), 0.7);
+    }
+
+    .rss-icon-link {
+      position: absolute;
+      top: 8px;
+      right: 12px;
+      z-index: 10;
+    }
+  }
+
+  /* Zoom overlay */
+  #Img-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+
+  #Img-overlay img {
+    max-width: 90%;
+    max-height: 90%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    transition: transform 0.3s ease;
+    cursor: zoom-out;
+  }
+
+  .zoomable {
+    cursor: zoom-in;
+  }
+
+  div#Copy-message {
+    position: fixed;
+    background: radial-gradient(
+      circle at center,
+      hsla(var(--color-purple-hover-a), 0.95),
+      hsla(var(--color-purple-hover-a), 0.95),
+      hsla(var(--color-purple-a), 0.95)
+    );
+    border: var(--glass-border);
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px hsla(var(--color-gray-900-a), 0.7);
+    color: #fff;
+    padding: 6px 10px;
+    font-size: 18px;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+    z-index: 9999;
+  }
+
+  #pointing-hand-rss {
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.12s linear;
+    position: absolute;
+    transform: scale(0.3) scaleX(-1);
+    z-index: 999;
+    top: -95px;
+    right: -220px;
+  }
+
+  #rss-hover:hover ~ #pointing-hand-rss {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  #rss-hover {
+    font-weight: bold;
+    color: orangered;
+    cursor: default;
   }
 }
 
-div#Timeline {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 17px;
-  padding: 30px 25px;
-  max-width: max-content;
-  margin: auto;
+/* ------------------------------------------- */
 
-  ::selection {
-    background-color: lightskyblue;
-    color: unset;
+@media only screen and (max-width: 700px) {
+  section div#Timeline a {
+    color: var(--color-link);
+    text-decoration-thickness: 1.5px;
+    text-underline-offset: 1px;
+    font-weight: 600;
   }
 
-  object {
+  #pointing-hand-rss {
+    display: none;
+  }
+
+  div#Timeline {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    padding: 0 5px;
+    max-width: max-content;
+    margin: auto;
+  }
+
+  div#Timeline object {
     user-select: none;
-    margin: 1px 3px 0 0;
+    margin: 1px 0 0 0;
     transform: translateY(3px);
+    scale: 0.8;
   }
 
   article.tweet-box {
-    margin: 20px auto;
-    padding: 8px 3px 25px 10px;
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    gap: 5px;
+    margin: 20px 0;
+    padding: 0px 3px 5px 5px;
     background-color: rgba(161, 191, 232, 1);
     border: var(--glass-border);
     border-radius: 10px;
+    display: flex;
   }
 
   img.profile-pic {
     border-radius: 100%;
     user-select: none;
+    width: 35px !important;
+    height: 35px !important;
+    aspect-ratio: 1/1;
+    margin-right: 5px;
+    margin-top: 5px;
   }
 
   span.tweeter {
     font-weight: 900;
     color: black;
+    font-size: 0.65rem;
   }
 
   span.tweet-grey {
     color: rgb(113, 118, 123);
     display: inline-block;
     transform: translateY(-2px);
+    font-size: 0.55rem;
   }
 
   p.tweet-text {
@@ -80,7 +240,7 @@ div#Timeline {
     margin: 0;
     padding: 0;
     max-width: 506px;
-    padding-right: 50px;
+    padding-right: 30px;
     padding-bottom: 10px;
   }
 
@@ -95,77 +255,56 @@ div#Timeline {
 
   .rss-icon-link {
     position: absolute;
-    top: 8px;
-    right: 12px;
+    top: 3px;
+    right: 5px;
     z-index: 10;
   }
-}
 
-/* Zoom overlay */
-#Img-overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
+  #Img-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
 
-#Img-overlay img {
-  max-width: 90%;
-  max-height: 90%;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-  border-radius: 20px;
-  transition: transform 0.3s ease;
-  cursor: zoom-out;
-}
+  #Img-overlay img {
+    max-width: 90%;
+    max-height: 90%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    transition: transform 0.3s ease;
+    cursor: zoom-out;
+  }
 
-.zoomable {
-  cursor: zoom-in;
-}
+  .zoomable {
+    cursor: zoom-in;
+  }
 
-div#Copy-message {
-  position: fixed;
-  background: radial-gradient(
-    circle at center,
-    hsla(var(--color-purple-hover-a), 0.95),
-    hsla(var(--color-purple-hover-a), 0.95),
-    hsla(var(--color-purple-a), 0.95)
-  );
-  border: var(--glass-border);
-  border-radius: 10px;
-  box-shadow: 0px 5px 10px hsla(var(--color-gray-900-a), 0.7);
-  color: #fff;
-  padding: 6px 10px;
-  font-size: 18px;
-  pointer-events: none;
-  opacity: 0;
-  transition: opacity 0.2s ease-in-out;
-  z-index: 9999;
-}
-
-#pointing-hand-rss {
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.12s linear;
-  position: absolute;
-  transform: scale(0.3) scaleX(-1);
-  z-index: 999;
-  top: -95px;
-  right: -220px;
-}
-
-#rss-hover:hover ~ #pointing-hand-rss {
-  visibility: visible;
-  opacity: 1;
-}
-
-#rss-hover {
-  font-weight: bold;
-  color: orangered;
-  cursor: default;
+  div#Copy-message {
+    position: fixed;
+    background: radial-gradient(
+      circle at center,
+      hsla(var(--color-purple-hover-a), 0.95),
+      hsla(var(--color-purple-hover-a), 0.95),
+      hsla(var(--color-purple-a), 0.95)
+    );
+    border: var(--glass-border);
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px hsla(var(--color-gray-900-a), 0.7);
+    color: #fff;
+    padding: 6px 10px;
+    font-size: 18px;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+    z-index: 9999;
+    transform: translateX(-120px);
+    width: max-content;
+  }
 }
