--- a/css/deck.css
+++ b/css/deck.css
@@ -156,13 +156,7 @@
     border-radius: 100%;
   }
 
-  #NoResults {
-    display: none;
-    color: orangered;
-    position: absolute;
-    top: 100px;
-    text-align: center;
-    width: 100%;
-    z-index: 100;
+  article:has(#Search-bar) {
+    padding-top: 20px !important;
   }
 }
