--- a/css/nav.css
+++ b/css/nav.css
@@ -256,9 +256,12 @@
     transform: translateY(2px);
   }
 
-  .dropdown-category > a > img:first-child {
+  .dropdown-category img {
     display: none;
   }
+
+
+
 
   #fish-404 {
     z-index: -1;
