--- a/css/style.css
+++ b/css/style.css
@@ -437,10 +437,23 @@
     margin: 0;
   }
 
- 
-
   main {
     flex: 1 0 auto; /* takes remaining space */
     padding-bottom: 2px; /* keeps your bottom gap */
+  }
+
+  .lucide-info:hover ~ span {
+    display: inline;
+  }
+
+  .mail-info {
+    font-size: 0.85rem;
+    font-family: var(--font-mono);
+    margin-left: 10px;
+    padding: 2px 10px;
+    background-color: rgb(60, 60, 60);
+    border-radius: 5px;
+    display: none;
+    border: 1px solid rgba(255, 255, 255, 0.2);
   }
 }
