--- a/css/variables.css
+++ b/css/variables.css
@@ -43,126 +43,135 @@
 
 /* ------------------------------------ */
 
-
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-Bold.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-Bold.woff2")
+    format("woff2");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-BoldItalic.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-BoldItalic.woff2")
+    format("woff2");
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-ExtraBold.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-ExtraBold.woff2")
+    format("woff2");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-ExtraBoldItalic.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-ExtraBoldItalic.woff2")
+    format("woff2");
   font-weight: 800;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-ExtraLight.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-ExtraLight.woff2")
+    format("woff2");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-ExtraLightItalic.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-ExtraLightItalic.woff2")
+    format("woff2");
   font-weight: 200;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-Italic.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-Italic.woff2")
+    format("woff2");
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-Light.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-Light.woff2")
+    format("woff2");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-LightItalic.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-LightItalic.woff2")
+    format("woff2");
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-Medium.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-Medium.woff2")
+    format("woff2");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-MediumItalic.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-MediumItalic.woff2")
+    format("woff2");
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-Regular.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-Regular.woff2")
+    format("woff2");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-SemiBold.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-SemiBold.woff2")
+    format("woff2");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-SemiBoldItalic.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-SemiBoldItalic.woff2")
+    format("woff2");
   font-weight: 600;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-Thin.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-Thin.woff2")
+    format("woff2");
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'JetBrainsMono';
-  src: url('/src/asset/font/JetBrainsMono/JetBrainsMono-ThinItalic.woff2') format('woff2');
+  font-family: "JetBrainsMono";
+  src: url("/src/asset/font/JetBrainsMono/JetBrainsMono-ThinItalic.woff2")
+    format("woff2");
   font-weight: 100;
   font-style: italic;
 }
-
-
-
 
 /* ------------------------------------ */
-
-
-
 
 :root {
   --color-gray-100: hsl(225, 40%, 98%);
@@ -216,7 +225,7 @@
 
   --color-green: hsl(120, 30%, 13%);
   --color-green-a: 120, 30%, 13%;
-  --color-green-m: hsl(120, 60%, 10%);
+  --color-green-m: hsl(120, 64.61%, 23.39%);
   --color-green-light: hsl(120, 100%, 50%);
   --color-green-light-a: 120, 100%, 50%;
 
@@ -241,5 +250,5 @@
   --font-size: 24px;
   --font: "cochin";
   --font-mono: "departure-mono";
-  --font-jb-mono : "JetBrainsMono";
+  --font-jb-mono: "JetBrainsMono";
 }
