--- a/css/style.css
+++ b/css/style.css
@@ -204,13 +204,15 @@
     }
   }
 
-  section a {
+  section a,
+  section a::selection {
     color: var(--color-link);
     text-decoration-thickness: 1px;
     text-underline-offset: 3px;
 
     &:hover,
-    &:focus-visible {
+    &:focus-visible,
+    &::selection:hover {
       color: var(--color-link-hover);
     }
 
@@ -218,7 +220,8 @@
       color: var(--color-link-active);
     }
 
-    &:visited {
+    &:visited,
+    &::selection:visited {
       color: var(--color-link-visited);
 
       &:hover,
