--- a/css/style.css
+++ b/css/style.css
@@ -510,8 +510,61 @@
     border: 1px solid rgba(255, 255, 255, 0.2);
   }
 
-ul ul {
-  margin-bottom: 0;
-}
+  ul ul {
+    margin-bottom: 0;
+  }
 
+  #newgrounds-webring:not(.minimal) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+  }
+
+  #newgrounds-webring.minimal {
+    z-index: 1;
+    box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.5);
+    margin: 30px auto;
+    border-radius: 9px;
+    height: 33px;
+    overflow: hidden;
+    transition: padding 0.4s ease;
+    will-change: padding;
+  }
+
+  #newgrounds-webring .outline {
+    border-radius: 8px 8px 0 0;
+    scale: 1.001;
+  }
+
+  #newgrounds-webring .background {
+    border-radius: 10px;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  }
+
+  #newgrounds-webring:hover .background {
+    border-radius: 10px;
+    opacity: 1;
+  }
+
+  #newgrounds-webring .footer {
+    border-radius: 5px;
+    position: relative;
+    z-index: 2;
+    transform: translateY(-310%);
+    transition: transform 0.5s ease;
+    will-change: transform;
+  }
+
+  #newgrounds-webring:hover .footer {
+    transform: translateY(0);
+    border-radius: 0 0 8px 8px;
+  }
+
+  #newgrounds-webring:hover {
+    transform: translateY(0);
+    padding-bottom: 85px;
+  }
 }
