--- a/css/contact.css
+++ b/css/contact.css
@@ -22,6 +22,7 @@
       color: var(--color-white);
       border-radius: 10px;
       padding: 0.5rem;
+      padding-bottom: 0.25rem;
       font-family: inherit;
       font-size: 1rem;
       resize: none;
@@ -219,4 +220,9 @@
   button span {
     transform: translateY(3px);
   }
+
+form#Secret-form fieldset {
+      padding-top: 0;
+    }
+
 }
