--- a/css/deck.css
+++ b/css/deck.css
@@ -23,9 +23,9 @@
   }
 
   form#Search-bar {
-    max-width: 60vw;
+
     width: 100%;
-    margin-left: 10px;
+    margin: 0 10px; 
 
     label {
       font-size: 0.75rem;
@@ -96,7 +96,7 @@
   }
 
   div#Deck {
-    margin: 40px 10px 25px 10px;
+    margin: 30px 10px 25px 10px;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -132,10 +132,17 @@
         border-top: 1px solid rgba(255, 255, 255, 0.1);
         backdrop-filter: blur(5px);
         width: 100%;
-        height: 20%;
-        padding-top: 25px;
+        height: 25%;
+        color: var(--color-off-white);
+        font-family: var(--font);
         bottom: 0;
         text-align: center;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: clamp(0.6rem, 2vw, 1.2rem);
+        overflow-wrap: break-word;
       }
 
       img {
@@ -157,6 +164,10 @@
 
         img {
           filter: brightness(1);
+        }
+
+        span {
+        color: white;
         }
       }
       &:hover::before {
