--- a/css/deck.css
+++ b/css/deck.css
@@ -103,13 +103,23 @@
     row-gap: 25px;
     justify-content: center;
 
+
+    .card[data-tags="newgrounds"] {
+    background: linear-gradient(to bottom, hsl(0, 0%, 0%) 50%, hsl(0, 0%, 8%)) !important;
+
+    &:hover span {
+    color: #FFB50E !important;
+    }}
+  
+  .card[data-tags="newgrounds"] span {
+    font-family: "NewGrounds" !important;
+  }
+
     .card {
       text-decoration: none;
       border: var(--glass-border);
       border-radius: 10px;
       flex: 1 1 290px;
-      display: flex;
-      justify-content: center;
       max-width: 290px;
       height: 400px;
       overflow: hidden;
@@ -118,7 +128,7 @@
       background: linear-gradient(to bottom, hsl(0, 0%, 6%), hsl(0, 0%, 8%));
       box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.5);
       cursor: pointer;
-      align-items: center;
+
       font-size: 1.3rem;
       color: hsla(var(--color-green-light-a), 0.5);
       font-family: var(--font-mono);
@@ -150,6 +160,13 @@
         min-height: 100%;
         filter: brightness(0.8);
         object-fit: cover;
+      }
+
+      img.non-cover {
+        width: 100%;
+        min-height: unset;
+        filter: brightness(0.8);
+        object-fit: contain;
       }
 
       &:has(#SpotifyWidget) {
@@ -198,6 +215,8 @@
     z-index: -1;
   }
 
+  
+  
   hr {
     color: hsla(var(--color-gray-100-a), 0.4);
     border: 0.5px solid;
