Refactor hover styles for improved clarity and consistency; update hr styles for better visual presentation

--- a/css/deck.css
+++ b/css/deck.css
@@ -109,9 +109,10 @@
       display: block;
 
 
-    &:hover span {
-    color: #FFB50E !important;
-    }}
+      &:hover span {
+      color: #FFB50E !important;
+      }
+    }
   
   .card[data-tags="newgrounds"] span {
     font-family: "NewGrounds" !important;
